[package]
name = "tagdb"
description = "Tag-based command-line database tool"
version = "0.1.0"
edition = "2024"
authors = ["Teemu Likonen <tlikonen@iki.fi>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
#futures = "0.3.31"
just-getopt = "2.0.0"
#libc = "0.2.174"
# sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
#xdg = "3.0.0"
