[package]
name = "tagdb"
description = "Tag-based command-line database tool"
version = "1.99.0"
edition = "2024"
rust-version = "1.85"
authors = ["Teemu Likonen <tlikonen@iki.fi>"]
license = "GPL-3.0-or-later"
publish = false
readme = "README.md"

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
just-getopt = "2.0.1"
libc = "0.2.174"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
xdg = "3.0.0"
tempfile = "3.21.0"
